﻿v9.9.621 (2022-07-09)
- Bug fixes.

v9.9.620 (2022-07-08)
- Added filename input for downloads and recordings.
- Other improvements.
- Bug fixes.

v9.9.619 (2022-07-07)
- Added overview guide window shourtcut.
- Database optimizations.

v9.9.618 (2022-07-02)
- Hotfix.

v9.9.617 (2022-07-02)
- Added overview guide window during playback.
- Fixed mktime overflow error.
- Optimized performance.

v9.9.616 (2022-06-25)
- Fixed cached playlists channel mismatching.

v9.9.615 (2022-06-20)
- Bug fixes.
- Fixed categories sortings.
- Fixed playlist channel matching.
- Optimized performance.

v9.9.614 (2022-06-16)
- Fixed service PlayerPL login.
- Added option to manually assign adult and vod EPG URL.
- Other fixes.

v9.9.613 (2022-06-11)
- Fixed playlists load error.

v9.9.612 (2022-06-10)
- Hotfix.

v9.9.611 (2022-06-06)
- Fixed login for services C More and Telia Play.

v9.9.610 (2022-06-05)
- Hotfix.

v9.9.609 (2022-06-05)
- Fixed exception error while adding missing channels.
- Fixed grouping error.
- Fixed login for services C More and Telia Play.

v9.9.608 (2022-05-26)
- Hotfix.

v9.9.607 (2022-05-26)
- Updated translations.
- Bug fixes.

v9.9.606 (2022-05-22)
- Optimized performance.
- Bug fixes.

v9.9.605 (2022-05-09)
- Fixed channel listing for service CMore.
- Bug fixes.

v9.9.604 (2022-05-05)
- Added support for TheMovieDb extended information.
- Fixed service CMore.

v9.9.603 (2022-04-24)
- Fixed service Polsat GO.
- Updated translations.

v9.9.602 (2022-04-22)
- Fixed channel access for service Polsat GO BOX.
- Other improvements.

v9.9.601 (2022-04-18)
- Bug fixes.
- Other improvements.

v9.9.6 (2022-04-15)
- Hotfix.

v9.9.5 (2022-04-13)
- Added catchup for service TVPGO.
- Fixed service PlayerPL parsing error.
- Fixed encodings.
- Optimized performance.
- Added playlist caching.
- Fixed local timezone.
- Bug fixes.

v9.9.4 (2022-03-02)
- Fixed error while using record services.
- Fixed encoding issues Python 2.7.

v9.9.3 (2022-02-27)
- Optimized performance.